--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
   },
   "scripts": {
     "watch": "node-sass assets/style/ -o ./ --source-map true --output-style expanded --indent-type tab --indent-width 1 -w",
-    "compile:css": "node-sass assets/style/ -o ./ && stylelint '*.css' --fix || true && stylelint '*.css' --fix",
+    "compile:css": "node-sass assets/style/ -o ./",
     "lint:scss": "wp-scripts lint-style 'assets/style/**/*.scss'",
     "lint:js": "wp-scripts lint-js 'assets/js/*.js'",
-    "bundle": "dir-archiver --src . --dest ../gamingtalker.zip --exclude .DS_Store .stylelintrc.json .eslintrc .git .gitattributes .github .gitignore README.md composer.json composer.lock node_modules vendor package-lock.json package.json .travis.yml phpcs.xml.dist sass style.css.map yarn.lock"
+    "bundle": "dir-archiver --src . --dest ../gamingtalker-shinka.zip --exclude .DS_Store .stylelintrc.json .eslintrc .git .gitattributes .github .gitignore README.md composer.json composer.lock node_modules vendor package-lock.json package.json .travis.yml phpcs.xml.dist sass style.css.map yarn.lock"
   }
 }
